# syncer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20240101000001_users.sql  20240101000002_workspaces.sql  20240101000003_decision_rooms.sql  20240101000004_dimensions_to_workspace.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/auth/: handlers.rs  middleware.rs  password.rs
backend/src/handlers/: comments.rs  dimensions.rs  mod.rs  proposals.rs  rooms.rs  scores.rs  workspaces.rs
backend/src/models/: comment.rs  dimension.rs  mod.rs  proposal.rs  room.rs  score.rs  stage.rs  user.rs  workspace.rs
backend/src/services/: comment_service.rs  dimension_service.rs  mod.rs  proposal_service.rs  room_service.rs  score_service.rs  stage_service.rs  workspace_service.rs
backend/src/ws/: handler.rs  manager.rs  messages.rs  mod.rs  presence.rs
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: auth.ts  client.ts  comments.ts  dimensions.ts  proposals.ts  rooms.ts  scores.ts  workspaces.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx
frontend/src/components/decision/: DecisionBanner.tsx
frontend/src/components/discussion/: CommentForm.tsx  CommentItem.tsx  CommentThread.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: usePresence.ts  useRoom.ts  useWebSocket.ts
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  RoomPage.tsx  WorkspaceDetailPage.tsx  WorkspaceDimensionsPage.tsx  WorkspacesPage.tsx
frontend/src/types/: index.ts
(+12 files in other folders)
